<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_city_query">CityQuery</string>
    <string name="title_activity_weather_info">WeatherInfo</string>
    <string name="add_city">Add city</string>
    <string name="home">Home</string>
    <string name="no_connection">No internet connection</string>
    <string name="title_activity_info">InfoActivity</string>

    <string name="version_splash">version 2.6.3</string>

    <string name="empty_list">City list is empty</string>
    <string name="widget_hourly">HOURLY</string>
    <string name="widget_daily">DAILY</string>
    <string name="widget_without">WITHOUT</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="user_profile_photo">User profile photo</string>
    <string name="sort">Sort</string>
    <string name="nejc_ribic">Nejc Ribič</string>
    <string name="email">nejc.ribic95@gmail.com</string>
    <string name="drawable_icon">Drawable icon</string>
    <string name="github_com_ribicnejc">github.com/ribicnejc</string>
    <string name="type">Type</string>
    <string name="sort_name">Name</string>
    <string name="sort_temperature">Temperature</string>
    <string name="sort_by">Sort By:</string>
    <string name="title_activity_widget_change_city">WidgetChangeCity</string>
    <string name="search_city">Search city</string>
    <string name="check_if_city_exists">Check if city exists</string>
    <string name="version_widget">version 1.0.5</string>
    <string name="widget_settings">Widget Settings</string>
    <string name="title_activity_google_maps">Map</string>

    <string name="server_client_id">579678056778-7r6ub53qi48avuivborvbi26m6h1mii9.apps.googleusercontent.com</string>
</resources>
