<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.povio.weatherapp.MainActivity">
    <item
        android:id="@+id/add_city"
        android:orderInCategory="100"
        android:title="@string/add_city"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/homeSet"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never"
        />
    <!--<item-->
        <!--android:orderInCategory="200"-->
        <!--android:title="@string/search"-->
        <!--android:id="@+id/search"-->
        <!--android:icon="@android:drawable/ic_menu_search"-->
        <!--app:showAsAction="always"-->
        <!--/>-->
    <item
        android:orderInCategory="200"
        android:title="@string/sort"
        android:id="@+id/sort_icon"
        android:icon="@drawable/a_z_sort"
        app:showAsAction="always"
        />

</menu>
