<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/widget_toolbar"
    android:layout_centerHorizontal="true"
    android:background="@color/colorWidgetToolbarBG"
    android:layout_weight="1.2">

    <TextView
        android:layout_weight="0.4"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:id="@+id/widget_hourly_button"
        android:textColor="@color/colorPrimary"
        android:text="@string/widget_hourly"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <TextView
        android:layout_weight="0.4"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:id="@+id/widget_daily_button"
        android:textColor="@color/colorLightGray"
        android:text="@string/widget_daily"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <TextView
        android:layout_weight="0.4"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:id="@+id/widget_without_button"
        android:textColor="@color/colorLightGray"
        android:text="@string/widget_without"
        android:layout_height="wrap_content"
        android:textAlignment="center" />
</LinearLayout>