<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#EEE"
    android:orientation="vertical"
    tools:context="com.povio.weatherapp.NavigationDrawerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <include layout="@layout/back_ground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/navigation_drawer_user_photo"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:contentDescription="@string/user_profile_photo"
                android:src="@drawable/user_test" />

            <TextView
                android:id="@+id/navigation_drawer_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nejc_ribic"
                android:textColor="@color/colorLightGray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/navigation_drawer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorLightGray" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <ImageView
                    android:contentDescription="@string/drawable_icon"
                    android:src="@drawable/drawable_home"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/drawable_icon_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Home"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
