<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.povio.weatherapp.Widget.WidgetChangeCity">

    <include layout="@layout/back_ground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/partly_cloudy_day" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorLightGray"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_splash"
            android:textSize="15sp"
            android:textColor="@color/colorLightGray"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:padding="0dp"
            android:background="@color/colorPrimaryDarkTrans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:padding="10dp"
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_city"
                android:singleLine="true"
                android:textColorHint="@color/colorLightGray" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

</RelativeLayout>
