<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.povio.weatherapp.CityQuery"
    tools:showIn="@layout/activity_city_query">

    <include layout="@layout/back_ground" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_add_city_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic" />

        <TextView
            android:id="@+id/app_add_city_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorLightGray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/app_add_city_verion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_splash"
            android:textColor="@color/colorLightGray"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/app_search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorDarkTransparentBackground"
                android:padding="10dp">

                <EditText
                    android:id="@+id/app_add_city_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_city"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorLightGray"
                    android:textColorHint="@color/colorLightGray" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/app_add_city_button_check_if_exists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_if_city_exists" />
    </LinearLayout>

    <ImageView
        android:id="@+id/app_add_city_blurry_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#77000000"
        android:contentDescription="@string/app_name" />

    <ProgressBar
        android:id="@+id/app_add_city_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
